--- a/res/css/common.css
+++ b/res/css/common.css
@@ -101,10 +101,9 @@ blockquote {
 }
 
 .post-view-title{
-	height: 50px;
 	font-size: 1.8rem;
-	padding: 10px;
-	margin:10px;
+	padding:0px 10px;
+	margin: 10px;
 }
 
 .post-view-date {
@@ -198,11 +197,13 @@ blockquote {
 .profile-button-box {
 	margin-top: 30px;
 }
+
+.profile-box-description-title{
+	font-size: 2rem;
+	border-radius: 5px;
+}
 .profile-button-icon {
 	padding: 10px;
-}
-.profile-button-box-description {
-
 }
 .profile-page-tags-section{
 	margin-top: 60px;
@@ -289,27 +290,6 @@ blockquote {
 
 
 /* Article setting */
-.post-view-title{
-	height: 50px;
-	font-size: 1.8rem;
-	padding: 10px;
-	margin:10px;
-}
-
-.post-view-date {
-	font-size: 0.7rem;
-	color: gray;
-	text-align: left;
-	padding: 5px 10px;
-	margin: 10px;
-}
-
-.post-view-tags{
-	padding: 10px;
-	margin:10px;
-	text-align: left;
-}
-
 
 .article-window {
 	border-radius: 10px;
@@ -343,21 +323,6 @@ blockquote {
 	background-color: #F0F0F0;
 }
 
-/* Comment to Articles */
-
-.comment-box {
-	padding: 20px;
-}
-
-.comment-box-author {
-
-}
-
-.comment-box-content {
-
-
-}
-
 /* Work Article Setting */
 
 .work-article-window {
@@ -378,6 +343,26 @@ blockquote {
 
 /* Footer Setting */
 
+/* Footer */
+
+.footer-left {
+	line-height: 35px;
+	letter-spacing:1.5px;
+	border-top-style: solid;
+}
+
+.footer-center {
+	line-height: 20px;
+	font-size:0.7rem;
+	border-top-style: solid;
+
+}
+
+.footer-right {
+	line-height: 20px;
+	border-top-style: solid;
+}
+
 .footer-window {
 	margin: 0px;
 	font-size: 12px;
@@ -389,10 +374,25 @@ blockquote {
 }
 
 .footer-section {
-	text-align: left;
+	text-align: center;
 	margin: 150px auto;
 	transform: translateY(-50%)
 }
+
+/* account-box */
+
+.account-box {
+	width:300px;
+	margin: auto auto;
+	text-align: center;
+}
+
+.account {
+	margin: 20px;
+	font-size:1em;
+	font-family: Arial;
+}
+
 /* img window */
 
 .img-window {
@@ -424,6 +424,10 @@ img {
 }
 
 /* box / category box */
+
+.box{
+	margin: 30px;
+}
 
 .box-icon{
 	background-color: #49A7A7;
@@ -459,6 +463,7 @@ img {
 /* Set the elements which should be changed values in different devices */
 /*******/
 
+/* notebook */
 
 @media only screen and (min-width: 769px) {
 
@@ -492,19 +497,16 @@ img {
 }
 
 .account {
-	margin: 20px;
+	margin: 10px;
 	font-size:1em;
 	font-family: Arial;
 }
 
-/* Box (category-box)*/
-
-.box{
-	background-color: white;
+.box {
 	margin: 100px;
 }
 
-
+/* ??? */
 @media only screen and (min-width: 321px) and (max-width: 768px) {
 
 /* Footer */
@@ -528,18 +530,21 @@ img {
 	border-top-style: dashed;
 }
 
+/* account-box */
+
+.account-box {
+	width:300px;
+	margin: auto auto;
+	text-align: center;
+}
+
 .account {
-	padding-left: 10px;
-	font-size:0.8rem;
+	margin: 20px;
+	font-size:1em;
+	font-family: Arial;
 }
 
-/* Box (category-box)*/
-
-.box{
-	background-color: white;
-	margin: 40px;
-}
-
+/* ??? */
 @media only screen and (min-width: 0px) and (max-width: 320px){
 
 /* Footer */
@@ -563,32 +568,18 @@ img {
 	border-top-style: dashed;
 }
 
+/* account-box */
+
+.account-box {
+	width:300px;
+	margin: auto auto;
+	text-align: center;
+}
+
 .account {
-	padding-left: 10px;
-	font-size:0.7rem;
-}
-
-/* Box (category-box)*/
-
-.box{
-	background-color: white;
 	margin: 20px;
+	font-size:1em;
+	font-family: Arial;
 }
-
-/* profile-left's padding and profile-right's padding*/
-
-.profile-page-left{
-	padding: 0 20px 0;
-}
-
-.profile-page-right{
-	padding: 0 20px 0;
-}
-
-
-
-
-
-
 
 
