--- a/_includes/profile-page/button-box.html
+++ b/_includes/profile-page/button-box.html
@@ -1,13 +1,13 @@
-<div class="profile-page-button-box">
-<div class="container-fluid profile-botton-box">
+<div class="profile-page-button-section">
+<div class="container-fluid profile-page-button-box">
 	<a href="{{site.baseurl}}/posts/">
 	<div class="row profile-button">
-		<div class="col-md-3 col-sm-0 profile-button-icon">
+		<div class="col-md-3 col-sm-3 profile-button-icon">
 			<span><i class="fas fa-pen-square fa-3x"></i></span>
 		</div>
-		<div class="col-md-9 col-sm-12 profile-page-button-box-description" >
+		<div class="col-md-9 col-sm-9 profile-page-button-box-description" >
 			<div class="profile-button-box-intro text-left" style=" width: 100%;">
-				<span class="profile-box-description-title">文章</span>
+				<span class="profile-page-button-box-description-title">文章</span>
 			</div>
 			<div class="profile-button-box-chart progress" style="height: 10px; width: 100%;">
 				<div class="progress-bar progress-bar-striped bg-warning progress-posts" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
@@ -16,15 +16,15 @@
 	</div>
 	</a>
 </div>
-<div class="container-fluid profile-button-box">
+<div class="container-fluid profile-page-button-box">
 	<a href="{{site.baseurl}}/works/">
 	<div class="row profile-button">
-		<div class="col-md-3 col-sm-0 profile-button-icon">
+		<div class="col-md-3 col-sm-3 profile-button-icon">
 			<span><i class="fas fa-coffee fa-3x"></i></span>
 		</div>
-		<div class="col-md-9 col-sm-12 profile-page-button-box-description" >
+		<div class="col-md-9 col-sm-9 profile-page-button-box-description" >
 			<div class="profile-button-box-intro text-left" style=" width: 100%;">
-				<span class="profile-box-description-title">作品</span>
+				<span class="profile-page-button-box-description-title">作品</span>
 			</div>
 			<div class="profile-button-box-chart progress" style="height: 10px; width: 100%;">
 				<div class="progress-bar progress-bar-striped bg-warning progress-works" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
