🎈 New Feature: 在文章標題列顯示關鍵字(tags)
參考顯示類別的方式來顯示關鍵字、類別可以點，而關鍵字點沒有反應

--- a/_includes/view-window-post.html
+++ b/_includes/view-window-post.html
@@ -17,6 +17,9 @@
 		{% for tag in post.categories %}
 		<a href="#" class="badge badge-success">{{ tag }}</a>
 		{% endfor %}
+		{% for tag in post.tags %}
+		<i href="#" class="badge badge-dark">{{ tag }}</i>
+		{% endfor %}
 	</div>
 	<hr>
 
