🎈 New Feature: 作品(work)刪除categories只使用tags
由於作品不分類，所以無需使用categories，只使用不能點按的tags

--- a/_includes/view-window-work.html
+++ b/_includes/view-window-work.html
@@ -17,9 +17,10 @@
 
 	<!-- tags -->
 	<div class="post-view-tags">
-		{% for tag in work.categories %}
-		<a href="#" class="badge badge-success">{{ tag }}</a>
+		{% for tag in work.tags %}
+		<i href="#" class="badge badge-dark">{{ tag }}</i>
 		{% endfor %}
+
 	</div>
 	<hr>
 
