--- a/_layouts/article_work.html
+++ b/_layouts/article_work.html
@@ -18,8 +18,8 @@ layout: home_work
 
 	<!-- tags -->
 	<div class="post-view-tags">
-		{% for tag in page.categories %}
-		<a href="#" class="badge badge-success">{{ tag }}</a>
+		{% for tag in page.tags %}
+		<i href="#" class="badge badge-dark">{{ tag }}</i>
 		{% endfor %}
 	</div>
 	<hr>
