🐛 Bug Fix: 修正Article拼錯
- Article拼錯
- Footer移到中間
- 加入版權宣吿

--- a/_includes/fixed-elements/nav-bar.html
+++ b/_includes/fixed-elements/nav-bar.html
@@ -13,7 +13,7 @@
              <a class="nav-link" href="{{site.baseurl}}/index.html">About me</a>
           </li>
           <li class="nav-item">
-             <a class="nav-link" href="{{site.baseurl}}/posts">Ariticles</a>
+             <a class="nav-link" href="{{site.baseurl}}/posts">Articles</a>
           </li>
           <li class="nav-item">
              <a class="nav-link" href="{{site.baseurl}}/works">Works</a>
