--- a/_includes/fixed-elements/footer.html
+++ b/_includes/fixed-elements/footer.html
@@ -7,6 +7,15 @@
 		<div class="footer-view footer-left col-md-4 text-left">
 			<div class="footer-section">
 				<div class="account-box">
+			</div>
+			</div>
+		</div>
+		<div class="footer-view footer-center col-md-4 text-center">
+			<div class="footer-section">
+				<div class="footer-copyright">
+					© 2020 TSU PEI All Rights Reserved
+				</div>
+				<div>
 					<a class="account" href="https://github.com/tsupei">
 						<i class="fab fa-github-square fa-3x"></i>
 					</a>
@@ -17,10 +26,6 @@
 						<i class="fas fa-envelope-square fa-3x"></i>
 					</a>
 				</div>
-			</div>
-		</div>
-		<div class="footer-view footer-center col-md-4 text-center">
-			<div class="footer-section">
 			</div>
 		</div>
 		<div class="footer-view footer-right col-md-4 text-center">
