--- a/_includes/profile-page/intro-box.html
+++ b/_includes/profile-page/intro-box.html
@@ -1,7 +1,7 @@
 <div class="profile-page-intro-section">
 	你好! 歡迎來到我的部落格
 	<br>
-	我喜歡研究<code><class="highlighter-rouge">自然語言處理、機器學習、深度學習</code>相關領域
+	我喜歡研究<code><class="highlighter-rouge">自然語言處理、機器學習、深度學習</code>領域
 	<br>
 	這邊是我紀錄一些所學所想的地方
 	<br>
