🎈 New Feature: 精選文章改成badge顯示
調整精選文章名稱的顯示

--- a/_includes/profile-page/highlight-box.html
+++ b/_includes/profile-page/highlight-box.html
@@ -3,8 +3,7 @@
 {% for post in site.posts %}
 	{% if post.highlight %}
 		<hr>
-		<a href="{{ site.baseurl }}{{ post.url  }}">{{ post.title }}</a>
+		<a href="{{ site.baseurl }}{{ post.url  }}" class="badge badge-warning">{{ post.title }}</a>
 	{% endif %}
 {% endfor %}
-
 </div>
