--- a/res/css/common.css
+++ b/res/css/common.css
@@ -213,6 +213,7 @@ blockquote {
 	margin-bottom: 20px;
 	padding: 20px;
 	border-radius: 5px;
+	opacity: 0.8;
 }
 
 .profile-page-highlight-section{
