🎈 New Feature: excerpt更改為斜體以及更改格式
改成簡單風格

--- a/_includes/widget/excerpt.html
+++ b/_includes/widget/excerpt.html
@@ -1,4 +1,10 @@
-<div style="margin:15px; padding:15px; border-radius:5px; font-family: Georgia; background-color: #F0F0F0	">
-	<i class="fas fa-bookmark fa-2x" style="margin:5px 10px 0 0;"></i>
-	{{include.text}} 
+
+<div class="row" style="margin:0px; padding:5px; background-color:#FCFCFC	; border-radius: 15px;">
+<div class="col-md-1">
+</div>
+<div class="col-md-10" style="margin:0px; padding:0px; border-radius:5px;  opacity:0.8; font-style: italic">
+<p>	{{include.text}} </p>
+</div>
+<div class="col-md-1">
+</div>
 </div>
