🎈 New Feature: 加入TAGS標籤預覽
在首頁可以看到所有TAGS，但無法點選

--- a/res/css/common.css
+++ b/res/css/common.css
@@ -16,6 +16,12 @@ img {
 	background-color: #FAF0E6	;
 	background-color: rgba(250, 240, 229, 1);
 }
+td {
+	padding: 0px 10px;
+}
+table {
+		margin: auto;
+}
 
 /* Motify bootstrap */
 code.highlighter-rouge {
