🎈 New Feature: 更改導覽列的文字

--- a/_includes/fixed-elements/nav-bar.html
+++ b/_includes/fixed-elements/nav-bar.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-default nav-color" >
-    <a class="navbar-brand" href="{{site.baseurl}}/index.html">Tsu-Pei Blog</a>
+    <a class="navbar-item" href="{{site.baseurl}}/index.html">Tsu-Pei Blog</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span><i class="fas fa-bars" ></i></span>
     </button>
@@ -10,13 +10,13 @@
 
         <ul class="navbar-nav ml-auto navbar-right">
           <li class="nav-item">
-             <a class="nav-link" href="{{site.baseurl}}/index.html">About me</a>
+             <a class="nav-link" href="{{site.baseurl}}/index.html">Home</a>
           </li>
           <li class="nav-item">
-             <a class="nav-link" href="{{site.baseurl}}/posts">Articles</a>
+             <a class="nav-link" href="{{site.baseurl}}/posts">Article</a>
           </li>
           <li class="nav-item">
-             <a class="nav-link" href="{{site.baseurl}}/works">Works</a>
+             <a class="nav-link" href="{{site.baseurl}}/works">Project</a>
           </li>
         </ul>
     </div>
