🎈 New Feature: footer新增medium同步發布敘述

--- a/_includes/fixed-elements/footer.html
+++ b/_includes/fixed-elements/footer.html
@@ -13,6 +13,8 @@
 		<div class="footer-view footer-center col-md-4 text-center">
 			<div class="footer-section">
 				<div class="footer-copyright">
+					此部落格的文章<br>部分同步發佈於medium
+					<br><br>
 					© 2020 TSU PEI All Rights Reserved
 				</div>
 				<div>
