🐛 Bug Fix: 修正表格會在手機版溢出問題
參考此網站: https://lcr.github.io/markdown-table-overflow/

--- a/res/css/common.css
+++ b/res/css/common.css
@@ -23,6 +23,11 @@ table {
 		margin: auto;
 }
 
+/* Fix Overflowing markdown table */
+.table-wrapper {
+  overflow-x: auto;
+}
+
 /* Motify bootstrap */
 code.highlighter-rouge {
 	margin-left: 5px;
