--- a/_includes/profile-page/tag-box.html
+++ b/_includes/profile-page/tag-box.html
@@ -1,7 +1,10 @@
 <div class="profile-page-tags-section">
 <div>
 	{% for post in site.posts %}
+        {% if post.categories contains "life" %}
+        {% else %}
 		<a href="{{ site.baseurl }}{{ post.url  }}" class="badge badge-warning">{{ post.title }}</a>
+        {% endif %}
 	{% endfor %}
 </div>
 <divi style="opacity:0.5">
