--- a/_includes/profile-page/tag-box.html
+++ b/_includes/profile-page/tag-box.html
@@ -1,16 +1,11 @@
 <div class="profile-page-tags-section">
 <div>
 	{% for post in site.posts %}
-        {% if post.categories contains "life" %}
-        {% else %}
+        {% if post.categories contains "cs" or post.categories contains "nlp" %}
 		<a href="{{ site.baseurl }}{{ post.url  }}" class="badge badge-warning">{{ post.title }}</a>
         {% endif %}
 	{% endfor %}
 </div>
-<divi style="opacity:0.5">
-	{% for tag in site.tags %}
-		<a class="badge badge-warning">{{ tag[0] }}</a>
-	{% endfor %}
-</div>
+
 </div>
 
