--- a/res/css/common.css
+++ b/res/css/common.css
@@ -32,8 +32,12 @@ table {
 code.highlighter-rouge {
 	margin-left: 5px;
 	margin-right: 5px;
-	color: #FF7575 ;
-	background-color:#FFEEDD;
+	padding: 2px;
+	color: #FF2D2D;
+	font-weight: 700;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 5px;
 }
 
 /* Custom Markdown Style*/
