--- a/res/css/common.css
+++ b/res/css/common.css
@@ -44,11 +44,8 @@ code.highlighter-rouge {
 	margin-left: 5px;
 	margin-right: 5px;
 	padding: 2px;
-	color: #FF2D2D;
+	color: #FFE66F;
 	font-weight: 700;
-	border-style: solid;
-	border-width: 1px;
-	border-radius: 5px;
 }
 
 /* Custom Markdown Style*/
