--- a/res/css/common.css
+++ b/res/css/common.css
@@ -44,7 +44,8 @@ code.highlighter-rouge {
 	margin-left: 5px;
 	margin-right: 5px;
 	padding: 2px;
-	color: #FFE66F;
+	color: black;
+	background-color: #FFE66F;
 	font-weight: 700;
 }
 
