--- a/res/css/common.css
+++ b/res/css/common.css
@@ -16,11 +16,8 @@ strong {
 	margin-left: 5px;
 	margin-right: 5px;
 	padding: 2px;
-	color: 	#00A600;
+	background-color: #BBFFBB;
 	font-weight: 700;
-	border-style: solid;
-	border-width: 1px;
-	border-radius: 5px;
 }
 
 img {
