Change profile photo

--- a/_includes/profile-page/photo-section.html
+++ b/_includes/profile-page/photo-section.html
@@ -1,4 +1,4 @@
 
 <div class="profile-page-photo-section">
-	<img src="{{site.baseurl}}/res/photo/cat.jpg" class="img-fluid">
+	<img src="{{site.baseurl}}/res/photo/myself.jpg" class="img-fluid">
 </div>
