--- a/res/css/common.css
+++ b/res/css/common.css
@@ -243,11 +243,12 @@ blockquote {
 	margin-top: 50px;
 	margin-bottom: 20px;
 	display:none;
-	background-color: #FFD9B3; /*淺橘*/
+	background-color: #FFEEDD; /*淺橘*/
 	opacity: 0.8;
 	padding: 20px;
 	font-family: courier;
-	border-style: solid;
+	border-radius: 10px;
+	font-weight: 700;
 }
 .profile-page-button-section {
 	margin-top: 60px;
