--- a/res/css/common.css
+++ b/res/css/common.css
@@ -167,7 +167,7 @@ blockquote {
 /* work settings */
 
 .work-home-color{
-	background-color: #009FCC;
+	background-color: #49729bb3;
 }
 
 .work-view-color{
