--- a/res/css/common.css
+++ b/res/css/common.css
@@ -18,6 +18,7 @@ strong {
 	padding: 2px;
 	background-color: #BBFFBB;
 	font-weight: 700;
+	border-radius: 5px;
 }
 
 img {
@@ -44,6 +45,7 @@ code.highlighter-rouge {
 	color: black;
 	background-color: #FFE66F;
 	font-weight: 700;
+	border-radius: 5px;
 }
 
 /* Custom Markdown Style*/
