--- a/_includes/fixed-elements/footer.html
+++ b/_includes/fixed-elements/footer.html
@@ -27,6 +27,9 @@
 					<a class="account" href="mailto:a5560648@gmail.com">
 						<i class="fas fa-envelope-square fa-3x"></i>
 					</a>
+					<a class="account" href="https://www.linkedin.com/in/tsupei/">
+						<i class="fas fa-linkedin fa-3x"></i>
+					</a>
 				</div>
 			</div>
 		</div>
