--- a/_includes/profile-page/photo-section.html
+++ b/_includes/profile-page/photo-section.html
@@ -1,4 +1,4 @@
 
 <div class="profile-page-photo-section">
-	<img src="{{site.baseurl}}/res/photo/myself.JPG" class="img-fluid">
+	<img src="{{site.baseurl}}/res/photo/myself.JPG" class="img-fluid" style="max-width: cacl(100% - 50px); margin: 80px;">
 </div>
