--- a/_includes/fixed-elements/footer.html
+++ b/_includes/fixed-elements/footer.html
@@ -28,7 +28,7 @@
 						<i class="fas fa-envelope-square fa-3x"></i>
 					</a>
 					<a class="account" href="https://www.linkedin.com/in/tsupei/">
-						<i class="fas fa-linkedin fa-3x"></i>
+						<i class="fab fa-linkedin fa-3x"></i>
 					</a>
 				</div>
 			</div>
