--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <html>
 	<head>
 	<meta charset="utf-8">
+	<link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/res/me.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- <title>Chen Tse-Pei's Blog</title> -->
 	<title>{{ page.title }}</title>
