--- a/_includes/profile-page/photo-section.html
+++ b/_includes/profile-page/photo-section.html
@@ -1,4 +1,4 @@
 
 <div class="profile-page-photo-section">
-	<img src="{{site.baseurl}}/res/photo/myself.JPG" class="img-fluid" style="max-width: calc(100% - 160px); margin: 80px; border-radius: 10px;">
+	<img src="{{site.baseurl}}/res/photo/blogicon.png" class="img-fluid" style="max-width: calc(100% - 200px); margin: 100px; border-radius: 10px;">
 </div>
